// Copyright 2020 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.system.v1alpha;

import "google/api/resource.proto";
import "wfa/measurement/system/v1alpha/requisition.proto";

option java_package = "org.wfanet.measurement.system.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "RequisitionsServiceProto";

// Kingdom system API service for interacting with `Requisition` resources.
service Requisitions {
  // Transitions the state of a `Requisition` from `UNFULFILLED` to `FULFILLED`.
  //
  // This is a [state transition method](https://google.aip.dev/216).
  rpc FulfillRequisition(FulfillRequisitionRequest) returns (Requisition);
}

// Request message for the `FulfillRequisition` method.
message FulfillRequisitionRequest {
  // Resource name of the `Requisition` to mark as fulfilled. Required.
  string name = 1 [(google.api.resource_reference).type =
                       "halo-system.wfanet.org/Requisition"];

  // `nonce` value received from the DataProvider. Required.
  fixed64 nonce = 2;
}
